# gsteditor

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  Makefile.in  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  gst-editor-libs-uninstalled.pc  gst-editor-libs.pc  libtool
cmake/: FindGStreamer.cmake  FindGStreamermm.cmake  FindGTKmm.cmake  FindGooCanvasmm.cmake
data/: debug.glade  editor.glade  editor.xml  elementbrowser.glade  main.glade  palettes.glade  properties.glade  utilities.glade
help/: Makefile  Makefile.in
help/C/: Makefile  Makefile.in  gst-editor-manual-C.omf.out
libs/: Makefile  Makefile.in
libs/gst/: Makefile  Makefile.in
libs/gst/common/: Makefile  Makefile.in  gste-debug.h  gste-marshal.c  gste-marshal.h  libgste-common.la  libgste_common_la-gste-common.lo  libgste_common_la-gste-debug.lo  libgste_common_la-gste-marshal.lo
libs/gst/common/.deps/: libgste_common_la-gste-common.Plo  libgste_common_la-gste-debug.Plo  libgste_common_la-gste-marshal.Plo
libs/gst/common/.libs/: libgste-common.la
libs/gst/debug-ui/: Makefile  Makefile.in  libgstdebugui.la  libgstdebugui_la-debug-ui.lo
libs/gst/debug-ui/.deps/: libgstdebugui_la-debug-ui.Plo
libs/gst/debug-ui/.libs/: libgstdebugui.la  libgstdebugui.lai  libgstdebugui.so.0  libgstdebugui.so.0.0.0
libs/gst/editor/: Makefile  Makefile.in  gst-helper.h  gsteditorcanvas.h  gsteditorelement.h  gsteditoritem.h  gsteditorlink.h  gsteditorpad.h  gsteditorproperty.c  gsteditorstatusbar.h  libgsteditor_la-gst-helper.lo  libgsteditor_la-gsteditor.lo  libgsteditor_la-gsteditorbin.lo  libgsteditor_la-gsteditorcanvas.lo  libgsteditor_la-gsteditorelement.lo  libgsteditor_la-gsteditorimage.lo  libgsteditor_la-gsteditoritem.lo  libgsteditor_la-gsteditorlink.lo  libgsteditor_la-gsteditorpad.lo  libgsteditor_la-gsteditorpalette.lo  libgsteditor_la-gsteditorpopup.lo  libgsteditor_la-gsteditorproperty.lo  libgsteditor_la-gsteditorstatusbar.lo
libs/gst/editor/.deps/: libgsteditor_la-gst-helper.Plo  libgsteditor_la-gsteditor.Plo  libgsteditor_la-gsteditorbin.Plo  libgsteditor_la-gsteditorcanvas.Plo  libgsteditor_la-gsteditorelement.Plo  libgsteditor_la-gsteditorimage.Plo  libgsteditor_la-gsteditoritem.Plo  libgsteditor_la-gsteditorlink.Plo  libgsteditor_la-gsteditorpad.Plo  libgsteditor_la-gsteditorpalette.Plo  libgsteditor_la-gsteditorpopup.Plo  libgsteditor_la-gsteditorproperty.Plo  libgsteditor_la-gsteditorstatusbar.Plo
libs/gst/element-browser/: Makefile  Makefile.in  caps-tree.h  element-tree.h  libgstelementbrowser.la  libgstelementbrowser_la-browser.lo  libgstelementbrowser_la-caps-tree.lo  libgstelementbrowser_la-element-tree.lo
libs/gst/element-browser/.deps/: libgstelementbrowser_la-browser.Plo  libgstelementbrowser_la-caps-tree.Plo  libgstelementbrowser_la-element-tree.Plo
libs/gst/element-browser/.libs/: libgstelementbrowser.la  libgstelementbrowser.lai  libgstelementbrowser.so.0.0.0
libs/gst/element-ui/: Makefile  Makefile.in  libgstelementui.la  libgstelementui_la-gst-element-ui-prop-view.lo  libgstelementui_la-gst-element-ui.lo
libs/gst/element-ui/.deps/: libgstelementui_la-gst-element-ui-prop-view.Plo  libgstelementui_la-gst-element-ui.Plo
libs/gst/element-ui/.libs/: libgstelementui.la  libgstelementui.lai  libgstelementui.so.0.0.0
pixmaps/: Makefile  Makefile.in  gdk-pixbuf-csource
pixmaps/.deps/: gdk_pixbuf_csource-gdk-pixbuf-csource.Po  gdk_pixbuf_csource-gdk-pixdata.Po
po/: Makefile  Makefile.in  POTFILES
src/: Makefile  Makefile.in  editor.c  editor.cpp  gst-editor.cpp  gst-inspect-gui.cpp  gst-launch-gui.cpp
src/common/: CMakeLists.txt  utils.cpp  utils.h
src/debug-ui/: CMakeLists.txt  debug-ui.cpp  debug-ui.h
src/editor/: CMakeLists.txt  editor.cpp  editor.h  editorcanvas.cpp  editorcanvas.h  editorproperty.cpp  editorproperty.h  gsteditor.cpp  gsteditor.h
src/element-browser/: CMakeLists.txt  browser.cpp  browser.h  caps-tree.cpp  caps-tree.h  element-tree.cpp  element-tree.h
src/element-ui/: CMakeLists.txt  element-ui-prop-view.cpp  element-ui-prop-view.h  element-ui.cpp  element-ui.h
src/launch-gui/: CMakeLists.txt  launch-gui.cpp  launch-gui.h
